# fp_core_base

./: .gitignore  CMakeLists.txt  README.md
commit_tool/: pre-add-commit.sh
common_tool/: build_spdlog.sh  pre_build_common.sh
fp/build_scripts/: build_base_core_linux.sh  build_base_core_win.sh  build_fp_base_common.sh  build_linux.sh
src/: main.cc
src/base_module/fp_event/: event_wrapper.h
src/base_module/fp_log/: fp_log.cc  fp_log.h  log_wrapper.cc  log_wrapper.h
src/base_module/fp_net/: net_wrapper.h
src/base_module/fp_platform_info/: platform_wrapper.h
src/base_module/fp_thread_pool/: thread_pool_wrapper.h
src/base_module/fp_zip/: zip_wrapper.h
src/common/: global_common_namespace_def.h
src/inner_base_module/fp_event/: event_wrapper.h
src/inner_base_module/fp_log/: log_wrapper.cc
src/inner_base_module/fp_net/: net_wrapper.h
src/inner_base_module/fp_platform_info/: platform_wrapper.h
src/inner_base_module/fp_thread_pool/: thread_pool_wrapper.h
src/inner_base_module/fp_zip/: zip_wrapper.h
src/logs/: log_wrapper.cc  log_wrapper.h
tools/astyle/: google.ini
tools/scripts/: build_zlib.sh  code_format.sh  common_define.sh
